--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "proje_firebase",
   "homepage": "https://kadircanyzc.github.io/to-do-list",
   "version": "0.1.0",
+  "homepage": "https://kadircanyzc.github.io/to-do-list",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.6",
@@ -36,6 +37,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "predeploy": "npm run build",
+"deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
